--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "prettier": "^2.5.1",
     "turbo": "latest"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.21.0"
   }
 }
