--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,6 +22,8 @@ jobs:
         run: yarn
 
       - name: Check Has Changeset
-        run: yarn changeset status --since=master
+        run: |
+          git pull -f origin master:master
+          yarn changeset status --since=master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
