--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -12,6 +12,14 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
+      - name: Setup Node.js 12.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 12.x
+
+      - name: Install Dependencies
+        run: yarn
+
       - name: generate new version
         run: |
           yarn changeset version
